<resources>
    <string name="app_name">Flip</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type your Email</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_profile_fragment">hello profile fragment</string>
    <string name="hello_new_fragment">hello new fragment</string>
    <string name="hello_home_fragment">hello home fragment</string>
    <string name="hello_fav_fragment">hello fav fragment</string>
    <string name="hello_search_fragment">hello search fragment</string>
    <string name="home_title">My Flips</string>
    <string name="create">Create</string>
    <string name="create_a_folder">Create a Folder</string>
    <string name="create_a_new_set">Create a New Set</string>

    <string name="new_set">New Set</string>
    <string name="front_card_text">Front Card Text</string>
    <string name="back_card_text">Back Card Text</string>
    <string name="search">Search</string>
    <string name="hello_events_fragment">Hello events fragment</string>
    <string name="refresh">refresh</string>
    <string name="more">Settings</string>
    <string name="flip">Flip</string>
    <string name="enter_name_of_new_set">Enter Name of New Set</string>
    <string name="add">Add Card</string>
    <string name="insert_new_card">Insert New Card</string>
    <string name="remove_last_card">Remove Last Card</string>
    <string name="christine_bui">Christine Bui</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="settings1">Settings</string>
    <string name="done">Done</string>
    <string name="enter_name">Enter Name</string>
    <string name="new_card_set_name">New Card Set Name:</string>
    <string name="card_set_name">Card Name</string>
    <string name="image_description">Card Set Image</string>


    <string name="question_label">Q</string>
    <string name="question_hint">Question</string>
    <string name="answer_label">A</string>
    <string name="answer_hint">Answer</string>
    <string name="show_answer">Flip to Back</string>
    <string name="hide_answer">Flip to Front</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="save_question">Save Question</string>
    <string name="add_subject">Add Subject</string>
    <string name="question_deleted">Question deleted.</string>
    <string name="question_added">Question added.</string>
    <string name="question_updated">Question updated.</string>
    <string name="subject">New Subject Name?</string>
    <string name="cancel">Cancel</string>
    <string name="edit_question">Edit Question</string>
    <string name="add_question">Add Question</string>
    <string name="no_questions">No Flashcards exist.</string>
    <string name="subject_exists">The subject "%1$s" already exists.</string>
    <string name="question_number">%1$s (%2$d of %3$d)</string>
    <string name="import_questions">Import</string>
    <string name="select_subject">Select a subject:</string>
    <string name="undo">Undo</string>
    <string name="back_of_the_card">Back of the Card</string>
    <string name="front_of_the_card">Front of the Card</string>
    <string name="back_of_card">Back of Card</string>
    <string name="enter_text">Enter Text</string>
    <string name="front_of_card">Front of Card</string>

    <string name="welcome_message">Welcome to the Notes App!</string>
    <string name="rename">Rename</string>



    <string name="settings">Settings</string>
    <string name="pref_title_theme">Dark theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_title_default_question">Default question</string>
    <string name="pref_title_subject_order">Subject order</string>
    <string name="pref_none">None</string>

    <string-array name="pref_subject_order">
        <item>Alphabetic</item>
        <item>Newest first</item>
        <item>Oldest first</item>
    </string-array>

    <string-array name="pref_subject_order_values">
        <item>alpha</item>
        <item>new_first</item>
        <item>old_first</item>
    </string-array>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sort_alphabetic">Sort by Name</string>
    <string name="sort_new_first">Sort by Newest</string>
    <string name="sort_old_first">Sort by Oldest</string>
</resources>