<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radio_alphabetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_alphabetic" />

    <RadioButton
        android:id="@+id/radio_new_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_new_first" />

    <RadioButton
        android:id="@+id/radio_old_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_old_first" />

</LinearLayout>