<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- action button for search -->
    <item android:title="@string/search"
        android:id="@+id/search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_search"/>

    <!-- action button for refresh -->
    <item android:title="@string/refresh"
        android:id="@+id/refresh"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"/>

    <!-- action button for copy -->
    <item android:title="@string/more"
        android:id="@+id/more"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_more"/>
</menu>