<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_question_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context="com.flip.flashcards.QuestionActivity">

        <TextView
            android:id="@+id/no_question_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_questions"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_question_button" />

        <Button
            android:id="@+id/add_question_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_question_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp">
        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >


            <!-- Card front -->
            <TextView
                android:id="@+id/front_card_text_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="16dp"
                android:text="@string/front_of_the_card"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/flashcard_background"/>

            <!-- Card back (hidden initially) -->
            <TextView
                android:id="@+id/back_card_text_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="16dp"
                android:text="@string/back_of_the_card"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/flashcard_background"/>


        </ViewFlipper>

        <Button
            android:id="@+id/flip_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="350dp"
            android:layout_marginTop="300dp"

            android:text="@string/flip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

