<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottomdia_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/buttonFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_folder"
        android:padding="10dp"
        android:textColor="@color/black"
        android:drawablePadding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create"
        app:drawableLeftCompat="@drawable/ic_action_new_folder" />

    <TextView
        android:id="@+id/buttonSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_set"
        android:padding="10dp"
        android:textColor="@color/black"
        android:drawablePadding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFolder"
        app:drawableLeftCompat="@drawable/ic_action_new_set" />

</androidx.constraintlayout.widget.ConstraintLayout>