<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.flip.flashcards.QuestionEditActivity">

    <TextView
        android:id="@+id/question_label_text_view"
        style="@style/QALabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/question_edit_text"
        android:text="@string/front_of_card"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/question_edit_text"
        style="@style/QAEditText"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="48dp"
        android:hint="Enter Text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer_label_text_view"
        style="@style/QALabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="218dp"
        android:labelFor="@id/answer_edit_text"
        android:text="@string/back_of_card"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answer_edit_text"
        style="@style/QAEditText"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="296dp"
        android:hint="@string/enter_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/save_question"
        android:src="@drawable/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>